--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -78,6 +78,9 @@
 						</li>
 					</ul>
 				</li>
+				<li class="sidebar-header">
+					<span class="sidebar-header-title">GALLERY</span>
+				</li>
 				<li>
 					<a href="#" class="sidebar-nav-menu">
 						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
@@ -96,6 +99,9 @@
 							<% end %>
 						</li>
 					</ul>
+				</li>
+				<li class="sidebar-header">
+					<span class="sidebar-header-title">LOCATION</span>
 				</li>
 				<li>
 					<a href="#" class="sidebar-nav-menu">
