--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-md-4 control-label" for="example-chosen">Ancestry</label>
+				<label class="col-md-4 control-label" for="example-chosen">Parent</label>
 				<div class="col-md-6">
 					<%= f.text_field :ancestry, class: 'form-control', placeholder: 'Ancestry' %>
 				</div>
