--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,10 +1,11 @@
-<p id="notice"><%= notice %></p>
 <div id="page-content">
 	<div class="block full">
 		<div class="block-title">
 			<div class="block-options pull-right">
 				<%= link_to new_gallery_path do %>
-					<div class="btn btn-success">Add Galleries</div>
+					<div class="btn btn-success">
+						New Data
+					</div>
 				<% end %>
 			</div>
 			<h2><strong>Galleries</strong> lists</h2>
