--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,9 @@
 		<div class="block-title">
 			<div class="block-options pull-right">
 				<%= link_to new_product_path do %>
-					<div class="btn btn-success">Add Product</div>
+					<div class="btn btn-success">
+						New Data
+					</div>
 				<% end %>
 			</div>
 			<h2><strong>Product</strong> lists</h2>
