--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -1,4 +1,5 @@
 <div id="page-content">
+	<%= render 'shared/title_top' %>
 	<div class="block">
 		<div class="block-title">
 			<div class="block-options pull-right">
@@ -8,17 +9,15 @@
 			</div>
 			<h2><strong>Gallery</strong> New</h2>
 		</div>
-		<%= form_for @gallery,
-			:html => {
-				:class => "form-horizontal form-bordered", 
-				:multipart => true 
-			} do |f| 
-		%>
+		<%= form_for @gallery, :html => { :class => "form-horizontal form-bordered", :multipart => true } do |f| %>
 		<fieldset>
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="example-chosen">Title</label>
 				<div class="col-md-6">
-					<%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+					<div class="input-group">
+						<%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+						<span class="input-group-addon"><i class="gi gi-list"></i></span>
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
