--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
 <div id="page-content">
+	<%= render 'shared/title_top' %>
 	<div class="block">
 		<div class="block-title">
 			<div class="block-options pull-right">
@@ -20,9 +21,20 @@
 				<% end %>
 			</div>
 			<div class="form-group">
+				<label class="col-md-4 control-label" for="example-chosen">Category</label>
+				<div class="col-md-6">
+					<div class="input-group">
+						<%= f.number_field :category_id, class: 'form-control', placeholder: 'Title' %>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
 				<label class="col-md-4 control-label" for="example-chosen">Title</label>
 				<div class="col-md-6">
-					<%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+					<div class="input-group">
+						<%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
+						<span class="input-group-addon"><i class="gi gi-list"></i></span>
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
@@ -30,7 +42,7 @@
 				<div class="col-md-6">
 					<%= f.text_area :description, class: 'form-control', placeholder: 'Description' %>
 				</div>
-			</div>
+			</div>			
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="example-chosen">Price</label>
 				<div class="col-md-6">
