--- a/app/views/shared/_header_top_navbar.html.erb
+++ b/app/views/shared/_header_top_navbar.html.erb
@@ -1,30 +1,9 @@
 <header class="navbar navbar-default">
-	<!-- <ul class="nav navbar-nav-custom">
+	<ul class="nav navbar-nav-custom">
 		<li>
 			<a href="#" onclick="App.sidebar('toggle-sidebar');">
 				<i class="fa fa-bars fa-fw"></i>
 			</a>
-		</li>
-		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				<i class="gi gi-settings"></i>
-			</a>
-			<ul class="dropdown-menu dropdown-custom dropdown-options">
-				<li class="dropdown-header text-center">Header Style</li>
-				<li>
-					<div class="btn-group btn-group-justified btn-group-sm">
-						<a href="#" class="btn btn-primary" id="options-header-default">Light</a>
-						<a href="#" class="btn btn-primary" id="options-header-inverse">Dark</a>
-					</div>
-				</li>
-				<li class="dropdown-header text-center">Page Style</li>
-				<li>
-					<div class="btn-group btn-group-justified btn-group-sm">
-						<a href="#" class="btn btn-primary" id="options-main-style">Default</a>
-						<a href="#" class="btn btn-primary" id="options-main-style-alt">Alternative</a>
-					</div>
-				</li>
-			</ul>
 		</li>
 	</ul>
 	<form action="#" method="post" class="navbar-form-custom" role="search">
@@ -33,12 +12,12 @@
 		</div>
 	</form>
 	<ul class="nav navbar-nav-custom pull-right">
-		<li>
+		<!-- <li>
 			<a href="#" onclick="App.sidebar('toggle-sidebar-alt', 'toggle-other');">
 				<i class="gi gi-share_alt"></i>
 				<span class="label label-primary label-indicator animation-floating">4</span>
 			</a>
-		</li>
+		</li> -->
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 				<%= image_tag 'avatar2.jpg' %>
@@ -57,13 +36,10 @@
 				<li class="divider"></li>
 				<li>
 					<a href="#">
-						<i class="fa fa-lock fa-fw pull-right"></i> Lock Account
-					</a>
-					<a href="#">
 						<i class="fa fa-ban fa-fw pull-right"></i> Logout
 					</a>
 				</li>
 			</ul>
 		</li>
-	</ul> -->
+	</ul>
 </header>
