fix image gallery products

--- a/app/assets/stylesheets/frontend/style.css
+++ b/app/assets/stylesheets/frontend/style.css
@@ -20,7 +20,7 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(loading4.gif) 50% 50% no-repeat #3B8183!important;;
+	background: url(../loading4.gif) 50% 50% no-repeat #3B8183!important;;
 }
 
 a {
