--- a/app/views/backend/products/_gallery_fields.html.erb
+++ b/app/views/backend/products/_gallery_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="well">
+<div class="well nested-fields">
 <fieldset>
 	<%= link_to_remove_association "<i class='fa fa-times'></i> Remove".html_safe, f, class: 'float-right btn btn-danger btn-xs' %>
 	<div class="form-group">
