--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -2,15 +2,15 @@
 	<div id="sidebar-scroll">
 		<div class="sidebar-content">
 			<%= link_to backend_path, class: 'sidebar-brand' do %>
-				<i class="gi gi-home"></i>
-				<span class="sidebar-nav-mini-hide">
-					<strong>Adminis</strong>trator
-				</span>
+			<i class="gi gi-home"></i>
+			<span class="sidebar-nav-mini-hide">
+				<strong>Adminis</strong>trator
+			</span>
 			<% end %>
 			<div class="sidebar-section sidebar-user clearfix sidebar-nav-mini-hide">
 				<div class="sidebar-user-avatar">
 					<%= link_to backend_path do %>
-						<%= image_tag 'avatar2.jpg', alt:'avatar' %>
+					<%= image_tag 'avatar2.jpg', alt:'avatar' %>
 					<% end %>
 				</div>
 				<div class="sidebar-user-name">Fathan R</div>
@@ -32,8 +32,8 @@
 			<ul class="sidebar-nav">
 				<li>
 					<%= link_to backend_path do %>
-						<i class="gi gi-home sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Dashboard</span>
+					<i class="gi gi-home sidebar-nav-icon"></i> 
+					<span class="sidebar-nav-mini-hide">Dashboard</span>
 					<% end %>
 				</li>
 				<li class="sidebar-header">
@@ -43,36 +43,17 @@
 					<a href="#" class="sidebar-nav-menu">
 						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
 						<i class="fa fa-users sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Admins</span>
+						<span class="sidebar-nav-mini-hide">Users</span>
 					</a>
 					<ul>
 						<li>
 							<%= link_to new_backend_product_path do %>
-								New Admin
+							New Admin
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_products_path do %>
-								List Admins
-							<% end %>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#" class="sidebar-nav-menu">
-						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
-						<i class="fa fa-users sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Members</span>
-					</a>
-					<ul>
-						<li>
-							<%= link_to new_backend_product_path do %>
-								New Member
-							<% end %>
-						</li>
-						<li>
-							<%= link_to backend_products_path do %>
-								List Members
+							List Admins
 							<% end %>
 						</li>
 					</ul>
@@ -89,12 +70,12 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_product_path do %>
-								New data
+							New data
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_products_path do %>
-								List data
+							List data
 							<% end %>
 						</li>
 					</ul>
@@ -108,12 +89,12 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_category_path do %>
-								New data
+							New data
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_categories_path do %>
-								List data
+							List data
 							<% end %>
 						</li>
 					</ul>
@@ -130,12 +111,12 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_province_path do %>
-								New data
+							New data
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_provinces_path do %>
-								List data
+							List data
 							<% end %>
 						</li>
 					</ul>
