--- a/app/views/layouts/application_backend.html.erb
+++ b/app/views/layouts/application_backend.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ruby On Rails APP</title>
-	<%= stylesheet_link_tag    'application_backend', media: 'all', 'data-turbolinks-track' => true %>
+	<title>SukabumiProperty</title>
+	<%= stylesheet_link_tag 'application_backend', media: 'all', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 </head>
 <body>
