--- a/app/views/backend/categories/index.html.erb
+++ b/app/views/backend/categories/index.html.erb
@@ -28,8 +28,8 @@
 						<td><%= category.parent ? category.parent.name : '-' %></td>
 						<td class="text-center">
 							<div class="btn-group">
-								<%= link_to 'Edit', edit_category_path(category), class: 'btn btn-default btn-sm' %> 
-								<%= link_to 'Delete', category_path(category), method: 'delete', class: 'btn btn-danger btn-sm', locals: {resource: category, confirmation: "#{category.name_for_tree} will be deleted, are you sure ?"} %> 
+								<%= link_to 'Edit', edit_backend_category_path(category), class: 'btn btn-default btn-sm' %> 
+								<%= link_to 'Delete', backend_category_path(category), method: 'delete', class: 'btn btn-danger btn-sm', locals: {resource: category, confirmation: "#{category.name_for_tree} will be deleted, are you sure ?"} %> 
 							</div>
 						</td>
 					</tr>
