--- a/app/views/backend/products/_form_gallery.html.erb
+++ b/app/views/backend/products/_form_gallery.html.erb
@@ -5,7 +5,10 @@
 	
 	<hr>
 	<div class="links">
-		<%= link_to_add_association 'Add Image', f, :galleries, partial: 'gallery_fields', class: "btn btn-default float-right" %>
+		<%= link_to_add_association f, :galleries, partial: 'gallery_fields', class: "btn btn-success float-right" do %>
+			<i class="fa fa-picture-o"></i>
+			<span>Add Image</span>
+		<% end %>
 	</div>
 	<br>
 	<br>
