--- a/app/views/backend/shared/_header_top_navbar.html.erb
+++ b/app/views/backend/shared/_header_top_navbar.html.erb
@@ -26,6 +26,9 @@
 			</a>
 			<ul class="dropdown-menu dropdown-custom dropdown-menu-right">
 				<li>
+					<%= link_to root_path do %>
+						<i class="fa fa-bank fa-fw pull-right"></i>View Website
+					<% end %>
 					<a href="#">
 						<i class="fa fa-user fa-fw pull-right"></i>Profile
 					</a>
