--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -48,11 +48,49 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_product_path do %>
-							New Admin
+							New User
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_products_path do %>
+							List Users
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="fa fa-user sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Profile</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_profile_path do %>
+							New Admin
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_profiles_path do %>
+							List Admins
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="fa fa-map-marker sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Address</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_address_path do %>
+							New Admin
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_addresses_path do %>
 							List Admins
 							<% end %>
 						</li>
