--- a/app/views/home/_ads_hot.html.erb
+++ b/app/views/home/_ads_hot.html.erb
@@ -3,6 +3,7 @@
 	<div class="container">
 		<div class="br25"></div>
 		<div class="row">
+			<%= bootstrap_flash %>
 			<div class="row">
 				<div class="col-md-9">
 					<h3>HOT IKLAN</h3>
