--- a/app/views/shareds/_footer.html.erb
+++ b/app/views/shareds/_footer.html.erb
@@ -73,10 +73,10 @@
 				</div>
 				<div class="modal-body">
 					<div class="form-group">
-						<a class="btn btn-primary btn-block">
-							<i class="fa fa-facebook pull-left"></i>
+						<%= link_to user_omniauth_authorize_path(:facebook), class: 'btn btn-primary btn-block' do %>
+              <i class="fa fa-facebook pull-left"></i>
 							Login dengan Facebook
-						</a>
+            <% end %>
 					</div>
 					<div class="br5"></div>
 					<i class="hr-login-modal"></i>
