--- a/app/views/backend/home/index.html.erb
+++ b/app/views/backend/home/index.html.erb
@@ -70,7 +70,8 @@
 			</li>
 		</ul>
 	</div>
-	<div class="alert alert-info alert-dismissable">
-		Selamat datang, Fathan Rohman. di ruang Administrator masa depan cerah untuk kehidupan selanjutnya dalam IT
-	</div>
+
+	<p class="bg-success bg-primary-bg-clasess">
+		<span class="fa fa-male"></span>   Selamat datang, Fathan Rohman. di ruang Administrator 
+	</p>	
 </div>
