--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -67,12 +67,12 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_profile_path do %>
-							New Admin
+							New Profile
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_profiles_path do %>
-							List Admins
+							List Profile
 							<% end %>
 						</li>
 					</ul>
@@ -86,12 +86,12 @@
 					<ul>
 						<li>
 							<%= link_to new_backend_address_path do %>
-							New Admin
+							New Address
 							<% end %>
 						</li>
 						<li>
 							<%= link_to backend_addresses_path do %>
-							List Admins
+							List Addresses
 							<% end %>
 						</li>
 					</ul>
