--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12"> 
-        <h3>Masuk Anggota Sukabumi property</h3>
+        <h3>Sukabumi property</h3>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
               <%= f.email_field :email, class: 'form-control', autofocus: true %>
               <div class="br10"></div>
               <label class="label-form-login">Username</label>
-              <%= f.text_field :username, class: 'form-control', autofocus: true %>
+              <%= f.text_field :username, class: 'form-control' %>
               <div class="br10"></div>
               <label class="label-form-login">Password</label>
               <%= f.password_field :password, class: 'form-control', autocomplete: "off" %>
