fix all devise backend and frontend

--- a/app/views/shareds/_footer.html.erb
+++ b/app/views/shareds/_footer.html.erb
@@ -73,7 +73,7 @@
 				</div>
 				<div class="modal-body">
 					<div class="form-group">
-						<%= link_to user_omniauth_authorize_path(:facebook), class: 'btn btn-primary btn-block' do %>
+						<%= link_to root_path, class: 'btn btn-primary btn-block' do %>
               <i class="fa fa-facebook pull-left"></i>
 							Login dengan Facebook
             <% end %>
