--- a/app/views/backend/shared/_header_top_navbar.html.erb
+++ b/app/views/backend/shared/_header_top_navbar.html.erb
@@ -38,9 +38,8 @@
 				</li>
 				<li class="divider"></li>
 				<li>
-					<a href="#">
-						<i class="fa fa-ban fa-fw pull-right"></i> Logout
-					</a>
+					<i class="fa fa-ban fa-fw pull-right"></i>
+					<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
 				</li>
 			</ul>
 		</li>
