--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -47,51 +47,13 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_user_path do %>
 							New User
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_users_path do %>
 							List Users
-							<% end %>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#" class="sidebar-nav-menu">
-						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
-						<i class="fa fa-user sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Profile</span>
-					</a>
-					<ul>
-						<li>
-							<%= link_to new_backend_profile_path do %>
-							New Profile
-							<% end %>
-						</li>
-						<li>
-							<%= link_to backend_profiles_path do %>
-							List Profile
-							<% end %>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#" class="sidebar-nav-menu">
-						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
-						<i class="fa fa-map-marker sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Address</span>
-					</a>
-					<ul>
-						<li>
-							<%= link_to new_backend_address_path do %>
-							New Address
-							<% end %>
-						</li>
-						<li>
-							<%= link_to backend_addresses_path do %>
-							List Addresses
 							<% end %>
 						</li>
 					</ul>
