--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -29,7 +29,7 @@
                 <label></label>
                 <%= f.submit "Send me reset password instructions", class: 'btn btn-warning btn-blocks' %>
               </div>
-              <%= render "devise/shared/links" %>
+              <%= render "users/shared/links" %>
             </div>
             <% end %>
           </div>
