--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -50,7 +50,7 @@
                 <label></label>
                 <%= f.submit "Sign up", class: 'btn btn-success' %>
               </div>
-              <%= render "devise/shared/links" %>
+              <%= render "users/shared/links" %>
             </div>
             <% end %>
           </div>
