--- a/app/views/backend/users/edit.html.erb
+++ b/app/views/backend/users/edit.html.erb
@@ -9,7 +9,7 @@
 			</div>
 			<h2><strong>Product</strong> New</h2>
 		</div>
-		<%= form_for [:backend, @user], url: backend_users_path, method: 'put', :html => {:class => "form-horizontal form-bordered"} do |f| %>
+		<%= form_for [:backend, @user], url: backend_user_path, method: 'put', :html => {:class => "form-horizontal form-bordered"} do |f| %>
 			<%= render partial: 'form', locals: {f: f} %>
 			<div class="form-group form-actions">
 				<div class="col-md-8 col-md-offset-4">
