--- a/app/views/backend/users/_profile_form.html.erb
+++ b/app/views/backend/users/_profile_form.html.erb
@@ -9,7 +9,7 @@
 	<div class="form-group">
 		<label class="col-md-4 control-label" for="example-chosen">Avatar</label>
 		<div class="col-md-6">
-			<%= image_tag @user.profile.avatar.url(:large) %>
+			<%#= image_tag @user.profile.avatar.url(:large) %>
 			<%= profile.file_field :avatar, class: 'form-control' %>
 		</div>
 	</div>
