revision style backeground front end

--- a/app/assets/stylesheets/frontend/style.css
+++ b/app/assets/stylesheets/frontend/style.css
@@ -789,7 +789,7 @@ h3{
 /*section news*/
 
 .news{
-	background: url(background.png) fixed;
+	background: url(../background.png) fixed;
 	/*margin-bottom: 20px;*/
 	padding-bottom: 40px;
 }
