fix web setting backend

--- a/app/views/backend/home/index.html.erb
+++ b/app/views/backend/home/index.html.erb
@@ -43,29 +43,14 @@
 <div id="page-content">
 	<div class="content-header">
 		<ul class="nav-horizontal text-center">
-			<li class="active">
+			<li>
 				<%= link_to backend_path do %>
-					<i class="fa fa-home"></i> Home
+					<i class="fa fa-home"></i> Dashboard
 				<% end %>
 			</li>
 			<li>
 				<%= link_to backend_products_path do %>
-					<i class="fa fa-taxi"></i> Products <span class="label label-info">1000</span>
-				<% end %>
-			</li>
-			<li>
-				<%= link_to backend_categories_path do %>
-					<i class="fa fa-bookmark"></i> Category Products <span class="label label-info">20</span>
-				<% end %>
-			</li>
-			<li>
-				<%= link_to backend_provinces_path do %>
-					<i class="fa fa-map-marker"></i> Province <span class="label label-info">33</span>
-				<% end %>
-			</li>
-			<li>
-				<%= link_to backend_galleries_path do %>
-					<i class="fa fa-picture-o"></i> Galleries <span class="label label-info">345</span>
+					<i class="fa fa-bank"></i> Products
 				<% end %>
 			</li>
 		</ul>
