--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -43,7 +43,7 @@
 					<a href="#" class="sidebar-nav-menu">
 						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
 						<i class="fa fa-users sidebar-nav-icon"></i> 
-						<span class="sidebar-nav-mini-hide">Users</span>
+						<span class="sidebar-nav-mini-hide">Members</span>
 					</a>
 					<ul>
 						<li>
@@ -100,7 +100,86 @@
 					</ul>
 				</li>
 				<li class="sidebar-header">
-					<span class="sidebar-header-title">LOCATION</span>
+					<span class="sidebar-header-title">BRANDS PRODUCTS</span>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-tags sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Elektronik & Gadget</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_product_path do %>
+							New data
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_products_path do %>
+							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-tags sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Property</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_product_path do %>
+							New data
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_products_path do %>
+							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-tags sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Bike</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_product_path do %>
+							New data
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_products_path do %>
+							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-tags sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Car</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to new_backend_product_path do %>
+							New data
+							<% end %>
+						</li>
+						<li>
+							<%= link_to backend_products_path do %>
+							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li class="sidebar-header">
+					<span class="sidebar-header-title">OTHER</span>
 				</li>
 				<li>
 					<a href="#" class="sidebar-nav-menu">
@@ -117,6 +196,20 @@
 						<li>
 							<%= link_to backend_provinces_path do %>
 							List data
+							<% end %>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="#" class="sidebar-nav-menu">
+						<i class="fa fa-angle-left sidebar-nav-indicator sidebar-nav-mini-hide"></i>
+						<i class="gi gi-google_maps sidebar-nav-icon"></i> 
+						<span class="sidebar-nav-mini-hide">Web Setting</span>
+					</a>
+					<ul>
+						<li>
+							<%= link_to backend_web_settings_path do %>
+								List data
 							<% end %>
 						</li>
 					</ul>
