--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -35,7 +35,7 @@
               <%= f.email_field :email, class: 'form-control', autofocus: true %>
               <div class="br10"></div>
               <label class="label-form-login">Username</label>
-              <%= f.email_field :username, class: 'form-control' %>
+              <%= f.text_field :username, class: 'form-control' %>
               <div class="br10"></div>
               <label class="label-form-login">Password</label>
               <% if @validatable %>
