--- a/app/views/backend/shared/_sidebar_left.html.erb
+++ b/app/views/backend/shared/_sidebar_left.html.erb
@@ -14,19 +14,10 @@
 					<% end %>
 				</div>
 				<div class="sidebar-user-name">Fathan R</div>
-				<div class="sidebar-user-links">
-					<a href="#" data-toggle="tooltip" data-placement="bottom" title="Profile">
-						<i class="gi gi-user"></i>
-					</a>
-					<a href="#" data-toggle="tooltip" data-placement="bottom" title="Messages">
-						<i class="gi gi-envelope"></i>
-					</a>
-					<a href="#" data-toggle="modal" class="enable-tooltip" data-placement="bottom" title="Settings">
-						<i class="gi gi-cogwheel"></i>
-					</a>
-					<a href="#" data-toggle="tooltip" data-placement="bottom" title="Logout">
+				<div class="sidebar-user-links">					
+					<%= link_to destroy_user_session_path, method: :delete do %>
 						<i class="gi gi-exit"></i>
-					</a>
+					<% end %>
 				</div>
 			</div>
 			<ul class="sidebar-nav">
@@ -129,12 +120,12 @@
 					</a>
 					<ul>
 						<li>
-							<%= link_to new_backend_product_path do %>
+							<%= link_to new_backend_product_property_path do %>
 							New data
 							<% end %>
 						</li>
 						<li>
-							<%= link_to backend_products_path do %>
+							<%= link_to backend_product_properties_path do %>
 							List data
 							<% end %>
 						</li>
